# medimetry

./: .coveragerc  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest.ini  tbump.toml  tox.ini
.github/workflows/: github-actions.yml
ci/: bootstrap.py
ci/templates/.github/workflows/: github-actions.yml
scripts/: update_tables.py
src/medimetry/: __init__.py  anthropometric.py  cardiac.py  cardio.py  cardiovasc.py  constants.py  converters.py  metabolic.py  neuro.py  pulmonary.py  renal.py
src/medimetry/data/anthropometric/: README.md  bfa-boys-percentiles-expanded-tables.csv  bfa-boys-zscore-expanded-tables.csv  bfa-girls-percentiles-expanded-tables.csv  bfa-girls-zscore-expanded-tables.csv  hcfa-boys-percentiles-expanded-tables.csv  hcfa-boys-zscore-expanded-tables.csv  hcfa-girls-percentiles-expanded-tables.csv  hcfa-girls-zscore-expanded-tables.csv  lhfa-boys-percentiles-expanded-tables.csv  lhfa-boys-zscore-expanded-tables.csv  lhfa-girls-percentiles-expanded-tables.csv  lhfa-girls-zscore-expanded-tables.csv  wfa-boys-percentiles-expanded-tables.csv  wfa-boys-zscore-expanded-tables.csv  wfa-girls-percentiles-expanded-tables.csv  wfa-girls-zscore-expanded-tables.csv  wfh-boys-percentiles-expanded-tables.csv  wfh-boys-zscore-expanded-tables.csv  wfh-girls-percentiles-expanded-tables.csv  wfh-girls-zscore-expanded-tables.csv
tests/: test_bmi.py  test_bsa.py  test_cardiovasc.py  test_dob2age.py  test_gcs.py  test_geneva.py  test_lytes.py  test_mad.py  test_metabolic.py  test_mgdl2umoll.py  test_perc.py  test_qtc.py  test_umoll2mgdl.py
